--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(freqm)
 export(freqp)
 import(dplyr)
+import(questionr)
 import(tibble)
 import(tidyr)
-importFrom(questionr,freq)
-importFrom(questionr,wtd.table)
