--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lourdR
 Title: Aperçu de données pondérées
 Version: 0.0.0.9000
-Imports: 
+Depends: 
     dplyr,
     questionr,
     tibble,
